Change entry style

--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -264,16 +264,18 @@ a.keyword {
 }
 
 .entry-header {
-    padding: 0 0 10px 0;
+    padding: 70px 0 10px 0;
     margin-bottom: 20px;
     border-bottom: 1px solid @border;
     position: relative;
 }
 
 .entry-title {
-    margin: 0;
-    line-height: 1.3;
-    font-size: 160%;
+    margin: 0 auto;
+    line-height: 1.5em;
+    font-size: 250%;
+    text-align: center;
+    width: 90%;
 }
 
 /* 日付 */
@@ -281,11 +283,13 @@ a.keyword {
 .date {
     font-weight: bold;
     margin-bottom: 10px;
+    text-align: center;
 
     a {
         color: @text-light;
         text-decoration: none;
-        font-size: 90%;
+        font-size: 150%;
+        font-family: @caption-font;
     }
 }
 
@@ -324,7 +328,7 @@ a.keyword {
 /* entry-content の中の書式 */
 
 .entry-content {
-    font-size: 95%;
+    font-size: 109%;
     line-height: 1.7;
     padding-bottom: 10px;
     border-bottom: 1px solid @border;
@@ -401,6 +405,7 @@ a.keyword {
         margin: 0 0 10px;
         padding: 20px;
         white-space: pre;
+        font-size: 85%;
     }
 
     pre>code {
@@ -417,7 +422,7 @@ a.keyword {
         margin: 0 2px;
         padding: 0 5px;
         border: 1px solid #eaeaea;
-        background-color: #f8f8f8;
+        background-color: #F7F7F9;
         border-radius: 3px;
         font-family: 'Monaco', 'Consolas', 'Courier New', Courier, monospace, sans-serif;
     }
