Fix sub pages layout

--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -674,6 +674,10 @@ a.keyword {
 /* About ページ */
 
 .page-about {
+    dl {
+        margin-top: 0;
+        padding-top: @content-top-padding;
+    }
 
     dt {
         font-size: 16px;
@@ -683,6 +687,7 @@ a.keyword {
     }
 
     dd {
+        font-size: 15px;
         margin-left: 0;
         margin-bottom: 30px;
     }
@@ -698,9 +703,14 @@ a.keyword {
             margin-bottom: 3em;
         }
 
+        .date {
+            text-align: left;
+        }
+
         .entry-title {
             font-size: 130%;
             margin: 0 0 .5em;
+            text-align: left;
         }
 
         .categories {
@@ -716,11 +726,9 @@ a.keyword {
     }
 
     .categories a {
-        color: #fff;
         font-size: 70%;
-        background: #aaa;
-        padding: 3px 5px;
-        border-radius: 3px;
+        padding: 3px 9px;
+
         text-decoration: none;
         .inline-block;
         margin-right: 2px;
