Display svg polygon bar loaded from RawGit CDN service

--- a/boilerplate/boilerplate.less
+++ b/boilerplate/boilerplate.less
@@ -230,7 +230,7 @@ a.keyword {
 
 /* edit area under header */
 #top-editarea {
-    background-color: @link;
+    background: @bg-header-bar url(https://cdn.rawgit.com/distkloc/SankakuValidator/master/resources/header-polygon-bar.svg?201405060408) no-repeat 0 0;
     height: 76px;
     .clearfix;
 
